--- a/src/app.json
+++ b/src/app.json
@@ -7,9 +7,6 @@
     "scheme": "src",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-    "ios": {
-      "supportsTablet": true
-    },
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#ffffff"
@@ -19,7 +16,7 @@
     "package": "com.coffeebreakmob",
     "web": {
       "bundler": "metro",
-      "output": "static"
+      "output": "server"
     },
     "plugins": [
       "expo-router",
@@ -31,7 +28,8 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "expo-web-browser"
+      "expo-web-browser",
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
