Create login Ux with consts/type for OAuth

--- a/src/app.json
+++ b/src/app.json
@@ -11,7 +11,8 @@
       "adaptiveIcon": {
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.anonymous.src"
     },
     "package": "com.coffeebreakmob",
     "web": {
@@ -20,14 +21,6 @@
     },
     "plugins": [
       "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
-        }
-      ],
       "expo-web-browser",
       "expo-secure-store"
     ],
